# hyprtag

./: Cargo.toml  LICENSE  hyprtagctl
src/: hyprctl.rs  main.rs  monitor.rs  state.rs
